--- a/bundle/manifests/memcached-operator-memcached-editor-role_rbac.authorization.k8s.io_v1_clusterrole.yaml
+++ b/bundle/manifests/memcached-operator-memcached-editor-role_rbac.authorization.k8s.io_v1_clusterrole.yaml
@@ -1,8 +1,11 @@
----
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: manager-role
+  creationTimestamp: null
+  labels:
+    app.kubernetes.io/managed-by: kustomize
+    app.kubernetes.io/name: memcached-operator
+  name: memcached-operator-memcached-editor-role
 rules:
 - apiGroups:
   - cache.karnagi.monster
@@ -19,14 +22,6 @@ rules:
 - apiGroups:
   - cache.karnagi.monster
   resources:
-  - memcacheds/finalizers
-  verbs:
-  - update
-- apiGroups:
-  - cache.karnagi.monster
-  resources:
   - memcacheds/status
   verbs:
   - get
-  - patch
-  - update
