--- a/config/rbac/memcached_editor_role.yaml
+++ b/config/rbac/memcached_editor_role.yaml
@@ -1,8 +1,11 @@
----
+# permissions for end users to edit memcacheds.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: manager-role
+  labels:
+    app.kubernetes.io/name: memcached-operator
+    app.kubernetes.io/managed-by: kustomize
+  name: memcached-editor-role
 rules:
 - apiGroups:
   - cache.karnagi.monster
@@ -19,14 +22,6 @@ rules:
 - apiGroups:
   - cache.karnagi.monster
   resources:
-  - memcacheds/finalizers
-  verbs:
-  - update
-- apiGroups:
-  - cache.karnagi.monster
-  resources:
   - memcacheds/status
   verbs:
   - get
-  - patch
-  - update
