--- a/config/rbac/memcached_viewer_role.yaml
+++ b/config/rbac/memcached_viewer_role.yaml
@@ -1,32 +1,23 @@
----
+# permissions for end users to view memcacheds.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: manager-role
+  labels:
+    app.kubernetes.io/name: memcached-operator
+    app.kubernetes.io/managed-by: kustomize
+  name: memcached-viewer-role
 rules:
 - apiGroups:
   - cache.karnagi.monster
   resources:
   - memcacheds
   verbs:
-  - create
-  - delete
   - get
   - list
-  - patch
-  - update
   - watch
-- apiGroups:
-  - cache.karnagi.monster
-  resources:
-  - memcacheds/finalizers
-  verbs:
-  - update
 - apiGroups:
   - cache.karnagi.monster
   resources:
   - memcacheds/status
   verbs:
   - get
-  - patch
-  - update
